--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kishmat.github.io/employee-api-frontent-",
+  "homepage": "http://kishmat.github.io/employee-app",
   "name": "xyzemployee",
   "version": "0.1.0",
   "private": true,
